# meshguard

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
scripts/: patch-android.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ble.rs  ble_plugin.rs  commands.rs  crypto.rs  device_config.rs  error.rs  lib.rs  main.rs  mesh_radio.rs  protocol.rs  state.rs
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: main.js
ui/src/styles/: main.css
